--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<link rel="shorcut icon" type="image/x-icon" href="./images/fevion.svg">
 </head>
 <body>	
-	<div id="Floater">
+<!-- 	<div id="Floater">
 		<p><i class="fad fa-eye"></i> Viewed &nbsp;<font id="fetchMe">0%</font></p>
-	</div>
+	</div> -->
 	<header id="head1">
 		<section class="Nav_Bar text-center">
 			<ul>
