--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 				</h1>
 				
 				<div class="Edu_container" >
-					<div class="odd" style="position: relative; top: 50px;">
+					<div class="odd" >
 						<div class="My_edu">
 							<div>
 								<img src="images/cn.jfif"
@@ -424,7 +424,7 @@
 					</div>
 
 
-					<div class="odd" style="position: relative; top: -80px;">
+					<div class="odd">
 						<div class="My_edu">
 							<div>
 								<img src="images/link.PNG"
